--- a/onlineshopping/src/main/webapp/assets/css/myapp.css
+++ b/onlineshopping/src/main/webapp/assets/css/myapp.css
@@ -1,47 +1,71 @@
+html {
+	height: 100%;
+}
+
 body {
-  padding-top: 70px
+	height: 100%;
+	padding-top: 70px
 }
 
 .slide-image {
-  width: 100%;
+	width: 100%;
 }
 
 .carousel-holder {
-  margin-bottom: 30px;
+	margin-bottom: 30px;
 }
 
-.carousel-control,.item {
-  border-radius: 4px;
+.carousel-control, .item {
+	border-radius: 4px;
 }
 
 .caption {
-  height: 130px;
-  overflow: hidden;
+	height: 130px;
+	overflow: hidden;
 }
 
 .caption h4 {
-  white-space: nowrap;
+	white-space: nowrap;
 }
 
 .thumbnail img {
-  width: 100%;
+	width: 100%;
 }
 
 .ratings {
-  color: #d17581;
-  padding-left: 10px;
-  padding-right: 10px;
+	color: #d17581;
+	padding-left: 10px;
+	padding-right: 10px;
 }
 
 .thumbnail {
-  padding: 0;
+	padding: 0;
 }
 
 .thumbnail .caption-full {
-  padding: 9px;
-  color: #333;
+	padding: 9px;
+	color: #333;
 }
 
 footer {
-  margin: 50px 0;
+	margin: 0;
+}
+
+/*
+	Customized Styling
+*/
+.wrapper {
+	min-height: 100%;
+	position: relative;
+}
+
+.content {
+	min-height: 100%;
+	padding-bottom: 40px;
+}
+
+.footer {
+	position: absolute;
+	height: 60px;
+	bottom: 15px;
 }
